<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.buku.addBuku">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="32dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/background_tambah"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tambah_buku"
                android:textColor="@color/hitam"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline4"/>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_height="2dp"
                android:background="@color/hitam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/ivGambarBuku"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="2dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/avatar" />
                </FrameLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUnggah"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="#FFFFFF"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Unggah"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:backgroundTint="@color/coklatRegis"
                    app:cornerRadius="15dp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/judullayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginHorizontal="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTambahJudulBuku"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/judul_buku"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTambahPengarang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pengarang"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTambahPenerbit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/penerbit"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSimpangBuku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="48dp"
                android:text="@string/submit"
                android:textColor="@color/hitam"
                android:backgroundTint="#E5E5E5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnKembaliBuku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="8dp"
                android:text="@string/kembali"
                android:textColor="@color/hitam"
                android:backgroundTint="@color/pink"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>