...

    <string name="judul_buku">Judul Buku</string>
    <string name="pengarang">Pengarang</string>
    <string name="tambah_buku">Tambah Buku</string>
    <string name="edit_buku">Edit Buku</string>

    <string name="submit">SUBMIT</string>
    <string name="kembali">KEMBALI</string>

    <string name="splashscreen">Splash Screen</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYXJraW40NiIsImEiOiJja2ZvdXg5cm8wM21lMnltcjBsNmJoZWlzIn0.weFn8aEc4H8wQYcWq04ekQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
...
